Fixed a bug where break-widget would create an empty line gap

--- a/src/designs/metal/basic.css
+++ b/src/designs/metal/basic.css
@@ -93,6 +93,9 @@ body br
   width: 100%;
   position: relative;
 }
+.widget_container.break_container {
+    line-height: 0px;
+}
 .navbar .widget_container {
   display: block;
 }
